--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,7 +1,16 @@
 <h1>FULL-STACK APP</h1>
 <mat-card>
+  <form (submit)="onAddPost(postForm)" #postForm="ngForm">
     <mat-form-field>
-        <textarea matInput rows="6" [(ngModel)]="enteredValue"></textarea>
-        </mat-form-field>
-        <button color="primary" mat-raised-button (click)="onAddPost()">Save Post</button>
+      <input matInput type="text" name="title" ngModel required minlength="3" #title="ngModel"/>
+      <mat-error *ngIf="title.invalid">Please Enter A Post Title!</mat-error>
+    </mat-form-field>
+    <mat-form-field>
+      <textarea matInput rows="4" name="content" ngModel required minlength="3" #content="ngModel"></textarea>
+      <mat-error *ngIf="content.invalid">Please Enter Post Content!</mat-error>
+    </mat-form-field>
+    <button color="primary" mat-raised-button type="submit">
+      Save Post
+    </button>
+  </form>
 </mat-card>
