--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,5 +1,7 @@
-<h1>TUT</h1>
-<mat-card>
+<h1 style="text-align: center">Getting started with MEAN stack </h1>
+
+
+<!-- <mat-card>
   <form (submit)="onAddPost(postForm)" #postForm="ngForm">
     <mat-form-field>
       <input matInput type="text" name="title" ngModel required minlength="3" #title="ngModel"/>
@@ -13,4 +15,4 @@
       Save Post
     </button>
   </form>
-</mat-card>
+</mat-card> -->
