--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -1,4 +1,4 @@
-<mat-accordion multi="true" *ngIf="posts.length > 0">
+<!-- <mat-accordion multi="true" *ngIf="posts.length > 0">
     <mat-expansion-panel *ngFor="let post of posts">
        <mat-expansion-panel-header>
         {{post.title}}
@@ -7,4 +7,4 @@
     </mat-expansion-panel>
 </mat-accordion>
 
-<h3 class="info-text mat-body-1" *ngIf="posts.length <= 0">No post's added yet</h3>
+<h3 class="info-text mat-body-1" *ngIf="posts.length <= 0">No post's added yet</h3> -->
