added in new downloads

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,73 +1,170 @@
 <mat-toolbar color="primary" style="position: fixed; z-index: 3;">
+  <h2><a href="#start">MEAN TUTORIAL</a></h2>
 
-    <h2><a href="#start">MEAN TUTORIAL</a></h2>
-
-    <ul class="nav">
-        <li><a class="divhead1" href="#nodediv">Node</a></li>
-        <li><a class="divhead2" href="#expressdiv">Express</a></li>
-        <li><a class="divhead3" href="#angulardiv">Angular</a></li>
-        <li><a class="divhead4" href="#mongodiv">Mongo DB</a></li>
-    </ul>
+  <ul class="nav">
+    <li><a class="divhead1" href="#nodediv">Node</a></li>
+    <li><a class="divhead2" href="#expressdiv">Express</a></li>
+    <li><a class="divhead3" href="#angulardiv">Angular</a></li>
+    <li><a class="divhead4" href="#mongodiv">Mongo DB</a></li>
+  </ul>
 </mat-toolbar>
 
-
 <div class="d-i-div1" id="start">
-    <h1 style="text-align: center; font-size: 3rem;">Downloads and Installations</h1>
+  <h1 style="text-align: center; font-size: 3rem;">
+    Downloads and Installations
+  </h1>
 
-    <mat-card class="download-divs">
-        <h3>Downloading Node</h3>
-        <p> 1. Check to see what node version you have by typing "node --version" if nothing is found move to step 2.</p>
-        <p>2. Go to <a href="https://nodejs.org/en/download/">Node.js Download</a></p>
-        <p>3. Install latest stable version and  click download </p>
-        <p>4. Follow installation procedures</p>
-        <p>5. Check to see if you Dowloaded it by typing "node --version"</p>
-    </mat-card>
+  <mat-card class="download-divs">
+    <h3>Downloading Node</h3>
+    <p>
+      1. Check to see what node version you have by typing "node --version" if
+      nothing is found move to step 2.
+    </p>
+    <p>
+      2. Go to <a href="https://nodejs.org/en/download/">Node.js Download</a>
+    </p>
+    <p>3. Install latest stable version and click download</p>
+    <p>4. Follow installation procedures</p>
+    <p>5. Check to see if you Dowloaded it by typing "node --version"</p>
+  </mat-card>
 
-    <mat-card class="download-divs">
-        <h3>Downloading Express</h3>
-        <p> 1. Must have node installed before going further</p>
-        <p>2. Go to a project folder of your terminal and type "npm install express --save"</p>
-        <p>3. Check to see if you Dowloaded it by creating a new js page and type "var express = require('express') var app = express()"</p>
-    </mat-card>
+  <mat-card class="download-divs">
+    <h3>Downloading Express</h3>
+    <p>1. Must have node installed before going further</p>
+    <p>
+      2. Go to a project folder of your terminal and type "npm install express
+      --save"
+    </p>
+    <p>
+      3. Check to see if you Dowloaded it by creating a new js page and type
+      "var express = require('express') var app = express()"
+    </p>
+  </mat-card>
 
-<mat-card class="download-divs">
+  <mat-card class="download-divs">
     <h3>Downloading Angular</h3>
-    <p> 1. Must have node installed before going further</p>
-    <p>2. Go to the root of your terminal and type "npm install -g @angular/cli"</p>
-    <p>3. At the end of the install process a prompt will come up asking you to share anonymous useage data with the Angular team type "y" for Yes or "n" for No</p>
+    <p>1. Must have node installed before going further</p>
+    <p>
+      2. Go to the root of your terminal and type "npm install -g @angular/cli"
+    </p>
+    <p>
+      3. At the end of the install process a prompt will come up asking you to
+      share anonymous useage data with the Angular team type "y" for Yes or "n"
+      for No
+    </p>
     <p>to chek if the download was successful type "ng version"</p>
-</mat-card>
+  </mat-card>
 
-<mat-card class="download-divs">
+  <mat-card class="download-divs">
     <h3>Downloading MongoDB</h3>
-    <p> 1. Go to <a href="https://www.mongodb.com/download-center/community">Mongo DB download</a> to start download</p>
-    <p>2. Select your operating system and current release in the dropdown forms and click "Download"</p>
-    <p>3. Follow installation procedures you will come to a page that looks like this:</p>
-    <img src="assets/img/mongopic1.jpg" height="300"/>
+    <p>
+      1. Go to
+      <a href="https://www.mongodb.com/download-center/community"
+        >Mongo DB download</a
+      >
+      to start download
+    </p>
+    <p>
+      2. Select your operating system and current release in the dropdown forms
+      and click "Download"
+    </p>
+    <p>
+      3. Follow installation procedures you will come to a page that looks like
+      this:
+    </p>
+    <img src="assets/img/mongopic1.jpg" height="300" />
     <p>4. Check boxes to match image above and finish installation process</p>
-    <p>5. To check if everything worked go to the folder path where MongoDB downloaded and open the bin folder</p>
+    <p>
+      5. To check if everything worked go to the folder path where MongoDB
+      downloaded and open the bin folder
+    </p>
     <p>6. Open up the "mongo.exe" folder and type "use newDB"</p>
-    <p>7. Type "db.items.insert(&#123;name: SOMENAME&#125;)" then type "db.items.find()"</p>
-    <img src="assets/img/mongopic2.jpg" height="300"/>
-</mat-card>
-
+    <p>
+      7. Type "db.items.insert(&#123;name: SOMENAME&#125;)" then type
+      "db.items.find()"
+    </p>
+    <img src="assets/img/mongopic2.jpg" height="300" />
+  </mat-card>
 </div>
-
 
 <div class="d-i-div" id="nodediv">
+  <mat-card class="download-divs">
     <h1 style="display: inline-flex">Node</h1>
-</div>
+    <p>
+      To demo installing middleware with npm, we'll use a super useful package
+      called nodemon. Using nodemon instead of the node command in your terminal
+      will automatically re-run your JavaScript file or project whenever you
+      save something. That means no more manual server restarts! This is a node
+      module we will want to be available everywhere because we will use it on
+      every project we create. To install nodemon globally, simply type into any
+      command line:
+    </p>
+    <img src="assets/img/nodemon1.jpg" height="100" width="600" />
 
+    <hr />
+
+    <p>
+      Using your terminal, make a file called test.js and add the following line
+      of code:
+    </p>
+    <img src="assets/img/nodemon2.jpg" height="100" width="600" />
+    <p>Run nodemon with new file to see it in action</p>
+    <img src="assets/img/nodemon3.jpg" height="100" width="600" />
+  </mat-card>
+</div>
 
 <div class="d-i-div" id="expressdiv">
+  <mat-card class="download-divs">
     <h1 style="display: inline-flex">Express</h1>
+    <p>
+      Express.js is a framework written in JavaScript which acts as an interface
+      to Node's server functionality. It is also the E in the MEAN stack, so it
+      must be important! Much like Flask, Express is an unopinionated set of
+      tools that allows us to create a robust server with more or less whatever
+      architecture we choose. To start, we are going to begin with a simple
+      server file that will generate our views, and as we begin adding
+      additional functionality down the road, we will begin creating our own MVC
+      layout in Express.
+    </p>
+    <hr />
+    <p>
+      Create a directory called "HelloExpress" directory, create a file called
+      "server.js". This file will contain all the logic that will run our
+      Express Server and navigate inide it.
+    </p>
+    <img src="assets/img/express1.jpg" height="300" width="600" />
+    <p>
+      Run the server.js file using nodemon "nodemon server.js"
+    </p>
+  </mat-card>
 </div>
 
-
 <div class="d-i-div" id="angulardiv">
+  <mat-card class="download-divs">
     <h1 style="display: inline-flex">Angular</h1>
+    <p>
+      We will need to create or utilize an Express project. Using the terminal,
+      we can create a new angular project within our Express root directory. We
+      then need to build the Angular project (using the terminal, navigate to
+      the Angular app's root directory and run the ng build --watch command)
+      which will create a dist folder within that directory. Lastly, we need our
+      Express project to define a static route to the newly created dist folder.
+      Once this is done, users visiting our Express project will be served the
+      Angular application.
+    </p>
+
+    <hr />
+    <p>
+      As long as Express knows where we keep static files, it will serve
+      index.html by default when we make a request to the root route. Since
+      index.html is found in a folder within our dist folder, we just need to
+      direct Express to find it. Do not overwrite what should be served on the
+      root route so that it will always default to serving index.html.
+    </p>
+    <img src="assets/img/mongopic1.jpg" height="300" />
+  </mat-card>
 </div>
 
 <div class="d-i-div" id="mongodiv">
-    <h1 style="display: inline-flex">Mongo DB</h1>
+  <h1 style="display: inline-flex">Mongo DB</h1>
 </div>
