added in repo to other app

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,6 +14,21 @@
     Downloads and Installations
   </h1>
 
+ <mat-card>
+   <div>
+  <h2 style="text-align: center">Repo to the working MEAN sample <span><a href="https://github.com/BuddhaTheChef/ang8-mean-app" style="color: #c1185a"> APP</a></span></h2>
+  <div style="display: flex; justify-content: center; flex-wrap: wrap;">
+    <img src="assets/img/working1.jpg" height="300"  style="margin: 10px"/>
+    <img src="assets/img/working2.jpg" height="300" style="margin: 10px"/>
+    <img src="assets/img/working3.jpg" height="300" style="margin: 10px"/>
+    <img src="assets/img/working4.jpg" height="300" style="margin: 10px"/>
+  </div>
+   </div>
+   <div>
+  <h2 style="text-align: center">Repo to this<span><a href="https://github.com/BuddhaTheChef/mean-fullstack-app" style="color: #c1185a"> MEAN TUTORIAL </a></span></h2>
+   </div>
+</mat-card>
+
   <mat-card class="download-divs">
     <h3 style="color: #c1185a">Downloading Node</h3>
     <p>
